--- a/Mission8/wwwroot/css/site.css
+++ b/Mission8/wwwroot/css/site.css
@@ -69,3 +69,19 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+/* JARED ADDED STUFF*/
+
+#list1 .form-control {
+    border-color: transparent;
+}
+
+    #list1 .form-control:focus {
+        border-color: transparent;
+        box-shadow: none;
+    }
+
+#list1 .select-input.form-control[readonly]:not([disabled]) {
+    background-color: #fbfbfb;
+}
