--- a/Mission8/Views/Home/Index.cshtml
+++ b/Mission8/Views/Home/Index.cshtml
@@ -2,7 +2,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+
+    <div class="row">
+        <div class="col-2">
+
+        </div>
+        <div class="col-5">
+            <h2>Urgent</h2>
+        </div>
+        <div class="col-5">
+            <h2>Not Urgent</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-5">Quadrant 1</div>
+        <div class="col-5">Quadrant 2</div>
+    </div>
+
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-5">Quadrant 3</div>
+        <div class="col-5">Quadrant 4</div>
+    </div>
+
 </div>
