--- a/Mission8/Views/Home/Delete.cshtml
+++ b/Mission8/Views/Home/Delete.cshtml
@@ -2,15 +2,15 @@
     ViewData["Title"] = "Delete Task";
 }
 
-@model ApplicationResponse
+@model TaskResponse
 
 <div class="container d-flex align-items-center justify-content-center vh-100">
     <div class="text-center">
         <h3 class="mb-3">Confirm Deletion</h3>
-        <h4 class="mb-4">Are you sure you want to delete the task @Task ? </h4>
+        <h4 class="mb-4">Are you sure you want to delete the task ? </h4>
 
         <form method="post" asp-controller="Home" asp-action="Delete">
-            <input type="hidden" asp-for="ApplicationId" />
+            <input type="hidden" asp-for="CategoryId" />
 
             <button type="submit" class="btn btn-danger mr-3">Delete</button>
             <a asp-controller="Home" asp-action="TaskList" class="btn btn-secondary">Cancel</a>
