--- a/Mission8/Views/Home/TaskList.cshtml
+++ b/Mission8/Views/Home/TaskList.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-@model List<InputResponse>
+@model List<TaskResponse>
 
 <div class="container">
     <h2 class="my-4 text-center">Movie List</h2>
@@ -27,8 +27,8 @@
                 <tr>
                     <td>@x.Task</td>
                     <td>@x.DueDate</td>
-                    <td>@x.Quadrant.QuadrantName</td>
-                    <td>@x.Category</td>
+                    <td>@x.Quadrant</td>
+                    <td>@x.Category.CategoryName</td>
                     <td>@x.Completed ? "Yes" : "No"</td>
                    
 
