--- a/Mission8/Views/Home/Index.cshtml
+++ b/Mission8/Views/Home/Index.cshtml
@@ -1,8 +1,37 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .vertical-text {
+        transform: rotate(90deg);
+        white-space: nowrap;
+    }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    .vertical-text > span {
+        transform: rotate(-90deg);
+    }
+</style>
+
+<div class="container">
+    <div class="row">
+        <div class="col-2">
+        </div>
+        <div class="col-5">
+            <h2>Urgent</h2>
+        </div>
+        <div class="col-5">
+            <h2>Not Urgent</h2>
+        </div>
+    </div>
+    <br /><br />
+    <div class="row">
+        <div class="col-2 vertical-text"  ><h2>Important</h2></div>
+        <div class="col-5"><h3>Quadrant 1</h3></div>
+        <div class="col-5"><h3>Quadrant 2</h3></div>
+    </div>
+    <div class="row">
+        <div class="col-2 vertical-text"><h2>Not Important</h2></div>
+        <div class="col-5"><h3>Quadrant 3</h3></div>
+        <div class="col-5"><h3>Quadrant 4</h3></div>
+    </div>
 </div>
