--- a/Mission8/Views/Shared/_Layout.cshtml
+++ b/Mission8/Views/Shared/_Layout.cshtml
@@ -37,12 +37,13 @@
                 </ul>
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand fw-bold">Home</a>
                 <a asp-controller="Home" asp-action="AddTask" class="navbar-brand fw-bold">Add</a>
+                <a asp-controller="Home" asp-action="Tasks" class="navbar-brand fw-bold">See Tasks</a>
 
                 @*<button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0">
-                    <span class="d-flex align-items-center">
-                        <a asp-controller="projectViews" asp-action="gradeCalc"><span class="small">Add/Edit</span></a>
-                    </span>
-                </button>*@
+            <span class="d-flex align-items-center">
+                <a asp-controller="projectViews" asp-action="gradeCalc"><span class="small">Add/Edit</span></a>
+            </span>
+        </button>*@
             </div>
         </div>
     </nav>
