--- a/Mission8/Views/Home/Index.cshtml
+++ b/Mission8/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{ ViewData["Title"] = "Home Page"; }
+
 @model List<TaskResponse>
 <style>
     .vertical-text {
@@ -43,7 +44,8 @@
         {
             if (x.Completed == false && x.QuadrantId == 2)
             {
-<p>@x.Task</p>                }
+            <p>@x.Task</p>                
+            }
 
             }
     </div>
@@ -55,7 +57,8 @@
         {
             if (x.Completed == false && x.QuadrantId == 3)
             {
-<p>@x.Task</p>                }
+            <p>@x.Task</p>                
+            }
 
             }
     </div>
@@ -64,7 +67,8 @@
         {
             if (x.Completed == false && x.QuadrantId == 4)
             {
-<p>@x.Task</p>                }
+            <p>@x.Task</p>                
+            }
 
             }
     </div>
