--- a/Mission8/Views/Home/Delete.cshtml
+++ b/Mission8/Views/Home/Delete.cshtml
@@ -13,7 +13,7 @@
             <input type="hidden" asp-for="TaskId" />
 
             <button type="submit" class="btn btn-danger mr-3">Delete</button>
-            <a asp-controller="Home" asp-action="TaskList" class="btn btn-secondary">Cancel</a>
+            <a asp-controller="Home" asp-action="Tasks" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
