--- a/Mission8/Views/Home/AddTask.cshtml
+++ b/Mission8/Views/Home/AddTask.cshtml
@@ -228,7 +228,7 @@
 
 </style>
 
-<div style="margin: auto; width: 50%;">
+<div style="margin: auto; width: 50%; margin-top: -50px;">
     <div class="testbox" style="">
         <form method="post">
 
@@ -254,10 +254,10 @@
                 <p style="font-weight: bold" asp-for="Quadrant">Quadrant</p>
                 <select asp-for="Quadrant" required>
                     <option value="" disabled selected></option>
-                    <option value="Important / Urgent">Important / Urgent</option>
-                    <option value="Important / Not Urgent">Important / Not Urgent</option>
-                    <option value="Not Important / Urgent">Not Important / Urgent</option>
-                    <option value="Not Important / Not Urgent">Not Important / Not Urgent</option>
+                    <option value=1>Important / Urgent</option>
+                    <option value=2>Important / Not Urgent</option>
+                    <option value=3>Not Important / Urgent</option>
+                    <option value=4>Not Important / Not Urgent</option>
                 </select>
             </div>
 
