--- a/Mission8/Views/Home/Index.cshtml
+++ b/Mission8/Views/Home/Index.cshtml
@@ -30,15 +30,18 @@
     <div class="row">
         <div class="col-2"><h4 class="vertical-text">Important</h4></div>
         <div class="col-5">
-            @foreach (var x in Model)
+            @if (Model != null)
             {
-                if (x.Completed == false && x.QuadrantId == 1)
+                @foreach (var x in Model)
                 {
-                    <p>@x.Task</p>
-                }
+                    if (x.Completed == false && x.QuadrantId == 1)
+                    {
+                        <p>@x.Task</p>
+                    }
 
+                }
             }
-    </div>
+        </div>
     <div class="col-5">
         @foreach (var x in Model)
         {
