--- a/Mission8/Views/Home/Tasks.cshtml
+++ b/Mission8/Views/Home/Tasks.cshtml
@@ -4,7 +4,7 @@
 @model List<TaskResponse>
 
 <div class="container">
-    <h2 class="my-4 text-center">Movie List</h2>
+    <h2 class="my-4 text-center">Task List</h2>
 
     <table class="table table-bordered table-striped">
 
@@ -22,17 +22,17 @@
         <tbody>
             @foreach (var x in Model)
             {
-    <tr>
-        <td>@x.Category.CategoryName</td>
-        <td>@x.Task</td>
-        <td>@x.DueDate</td>
-        <td>@x.Quadrant.QuadrantName</td>
-        <td>@x.Completed</td>
+            <tr>
+                <td>@x.Category.CategoryName</td>
+                <td>@x.Task</td>
+                <td>@x.DueDate</td>
+                <td>@x.Quadrant.QuadrantName</td>
+                <td>@x.Completed</td>
 
 
-        <td><a class="btn btn-primary" asp-controller="Home" asp-action="Edit" asp-route-taskid="@x.TaskId">Edit</a></td>
-        <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-taskid="@x.TaskId">Delete</a></td>
-    </tr>
+                <td><a class="btn btn-primary" asp-controller="Home" asp-action="Edit" asp-route-taskid="@x.TaskId">Edit</a></td>
+                <td><a class="btn btn-danger" asp-controller="Home" asp-action="Delete" asp-route-taskid="@x.TaskId">Delete</a></td>
+            </tr>
        }
         </tbody>
 
