--- a/Mission8/Views/Home/AddTask.cshtml
+++ b/Mission8/Views/Home/AddTask.cshtml
@@ -242,7 +242,7 @@
             <div class="item">
                 <p style="font-weight: bold" asp-for="CategoryId">Category<span>*</span></p>
                 <select asp-for="Category">
-                    <option value="" disabled selected>Select a Caregory</option>
+                    <option value="" disabled selected>Select a Category</option>
                     @foreach (Category c in ViewBag.Categories)
                     {
                         <option value="@c.CategoryId">@c.CategoryName</option>
@@ -254,10 +254,10 @@
                 <p style="font-weight: bold" asp-for="Quadrant">Quadrant</p>
                 <select asp-for="Quadrant" required>
                     <option value="" disabled selected></option>
-                    <option value="Important / Urgent">Important / Urgent</option>
-                    <option value="Important / Not Urgent">Important / Not Urgent</option>
-                    <option value="Not Important / Urgent">Not Important / Urgent</option>
-                    <option value="Not Important / Not Urgent">Not Important / Not Urgent</option>
+                    <option value="1">Important / Urgent</option>
+                    <option value="2">Important / Not Urgent</option>
+                    <option value="3">Not Important / Urgent</option>
+                    <option value="4">Not Important / Not Urgent</option>
                 </select>
             </div>
 
