--- a/Mission8/Views/Home/AddTask.cshtml
+++ b/Mission8/Views/Home/AddTask.cshtml
@@ -240,7 +240,7 @@
             <p>Enter the information below for the movie you would like to add</p>
 
             <div class="item">
-                <p style="font-weight: bold" asp-for="CategoryId">Category<span>*</span></p>
+                <label style="font-weight: bold" asp-for="CategoryId">Category<span>*</span></label>
                 <select asp-for="CategoryId">
                     <option value="" disabled selected>Select a Category</option>
                     @foreach (Category c in ViewBag.Categories)
@@ -251,13 +251,13 @@
             </div>
 
             <div class="item">
-                <p style="font-weight: bold" asp-for="Quadrant">Quadrant</p>
+                <label style="font-weight: bold" asp-for="Quadrant">Quadrant</label>
                 <select asp-for="QuadrantId" required>
                     <option value="" disabled selected></option>
-                    <option value="1">Important / Urgent</option>
-                    <option value="2">Important / Not Urgent</option>
-                    <option value="3">Not Important / Urgent</option>
-                    <option value="4">Not Important / Not Urgent</option>
+                    @foreach (Quadrant q in ViewBag.Quadrants)
+                    {
+                    <option value="@q.QuadrantId">@q.QuadrantName</option>
+                    }
                 </select>
             </div>
 
@@ -272,7 +272,7 @@
             </div>
 
             <div class="item">
-                <p style="font-weight: bold" asp-for="Completed">Completed</p>
+                <label style="font-weight: bold" asp-for="Completed">Completed</label>
                 <select asp-for="Completed" required>
                     <option value="" disabled selected></option>
                     <option value="True">Yes</option>
