--- a/Mission8/Views/Home/AddTask.cshtml
+++ b/Mission8/Views/Home/AddTask.cshtml
@@ -272,7 +272,7 @@
 
             <div class="item">
                 <label for="DueDate" asp-for="DueDate">Due Date</label>
-                <input type="date" id="DueDate" asp-for="DueDate" name="trip-start">
+                <input type="datetime" id="DueDate" asp-for="DueDate" name="trip-start">
             </div>
 
             <div class="item">
